# langgraph-course

./: .gitignore  README.md  fix_import.py  main.ipynb  pyproject.toml  todo.txt
f_01_sequential_workflows/: README.md
f_01_sequential_workflows/sf_01_simple_workflow/: README.md  bmi_calculate.py  bmi_state_class.py  label_bmi.py  main.py
f_01_sequential_workflows/sf_02_llm_based_workflows/: README.md  llm_question_answer.py  main.py
f_01_sequential_workflows/sf_03_prompt_chaining/: blog_state.py  evaluation.py  generate_blog.py  generate_outline.py  main.ipynb  model.py
f_02_parallel_workflows/: README.md
f_02_parallel_workflows/s_04_simple_workflow/: calculate_strike_rate.py  main.ipynb
f_02_parallel_workflows/s_05_llm_based/: clarity_of_thoughts.py  main.ipynb  main.py
f_02_parallel_workflows/sf_04_simple_workflow/: README.md  batsmen_state.py  calculate_balls_per_boundary.py  calculate_boundary_percent.py
f_02_parallel_workflows/sf_05_llm_based/: language_quality.py  model.py  overall_feedback.py
f_03_conditional_workflows/sf_06_simple_workflow/: calculate_discriminant.py  complex_roots.py  main.ipynb  main.py  state_schema.py
f_03_conditional_workflows/sf_07_llm_based_workflow/: README.md  check_sentiment.py  diagonsis_output_schema.py  main.py  negative_response.py  output_schema.py  review_state_schema.py
f_04_iterative_workflows/sf_08_llm_based_tweet_generator/: README.md  check_evaluation.py  evaluator_tweet.py  generator_tweet.py  main.ipynb  main.py  model.py  (+3 more)
f_09_observability_langsmith/: main.py
m_0_workflows/: README.md
(+61 files in other folders)
