[project]
name = "langgraph-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "grandalf>=0.8",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.10",
    "langchain-core>=1.2.15",
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.9",
    "pillow>=12.1.1",
    "streamlit>=1.54.0",
]
